--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" android:description="@string/description" android:logo="@drawable/logo">
@@ -41,6 +41,8 @@
         <activity android:name=".ui.winner.Winner"/>
         
         <activity android:permission="android.permission.ACCESS_COARSE_LOCATION" android:name=".data.Preferences"></activity>
+        <activity android:name=".ui.settings.SettingDialog"
+            android:theme="@style/AppDialog"/>
         
     </application>
 
